syntax = "proto3";

package v2.entity.post;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/dtc03012/me/protobuf/proto/entity/post";

message data {
  int32 id = 1;
  string writer = 2;
  string title = 3;
  string content = 4;
  int32 like_cnt = 5;
  bool is_notice = 6;
  int32 time_to_read_minute = 7;
  int32 views = 8;
  repeated string tags = 9;

  google.protobuf.Timestamp create_at = 10;
}